# LearnRust

./: .gitignore  README.md
document/: Plano_Curso_Rust_Rodrigo.docx
semana-04-backend/api/: Cargo.toml
semana-04-backend/api/src/: main.rs
semana-08-api/: Cargo.toml  README.md  docker-compose.yml
semana-08-api/src/: main.rs
semana-08-api/src/application/: authenticate_user.rs  dto.rs  mod.rs  register_user.rs  token_service.rs
semana-08-api/src/domain/: errors.rs  mod.rs  password_hasher.rs  repository.rs  user.rs
semana-08-api/src/infra/: db.rs  jwt_token_service.rs  mod.rs  postgres_user_repository.rs  sqlite_user_repository.rs
semana-08-api/src/presentation/: error_response.rs  handlers.rs  mod.rs  openapi.rs  routes.rs  state.rs
semana-08-api/tests/: auth_flow.rs
semana-11-produtos-pedidos/: .gitignore  Cargo.toml  README.md
semana-11-produtos-pedidos/src/: lib.rs  main.rs
semana-11-produtos-pedidos/src/application/: audit_logger.rs  authenticate_user.rs  delete_pedido.rs  delete_produto.rs  dto.rs  get_current_user.rs  get_pedido.rs  get_produto.rs  list_pedidos.rs  list_produtos.rs  mod.rs  register_cliente.rs  register_pedido.rs  register_produto.rs  register_user.rs  update_cliente.rs  update_produto.rs  update_user.rs
semana-11-produtos-pedidos/src/domain/: cliente.rs  cpf.rs  dinheiro.rs  email.rs  item_pedido.rs  mod.rs  nome.rs  pedido.rs  pedido_repository.rs  produto.rs  produto_id.rs  produto_repository.rs  quantidade.rs  user.rs
semana-11-produtos-pedidos/src/infra/: audit_log_replayer.rs  audited_cliente_repository.rs  audited_pedido_repository.rs  audited_produto_repository.rs  audited_user_repository.rs  cache_cliente_repository.rs  file_audit_logger.rs  jwt_token_service.rs  mod.rs
semana-11-produtos-pedidos/src/presentation/: auth_extractor.rs  error_response.rs  mod.rs  openapi.rs  path_id.rs  routes.rs  state.rs
semana-11-produtos-pedidos/src/presentation/handlers/: auth_handlers.rs  mod.rs  pedido_handlers.rs  produto_handlers.rs  user_handlers.rs
semana-11-produtos-pedidos/tests/: cadastro_flow.rs  produtos_pedidos_flow.rs
(+223 files in other folders)
