[package]
name = "cadastro-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
thiserror = "1"
async-trait = "0.1"
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tower_governor = "0.5"
governor = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
once_cell = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }
