[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
dominio-pedidos = { path = "../../semana-02-arquitetura/dominio-pedidos" }
infraestrutura = { path = "../../semana-02-arquitetura/infraestrutura" }